--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "tomcat-formula"]
 	path = tomcat-formula
 	url = https://github.com/saltstack-formulas/tomcat-formula.git
+[submodule "sun-java-formula"]
+	path = sun-java-formula
+	url = https://github.com/saltstack-formulas/sun-java-formula.git
