Ensure go-server running and update README and pillar example

--- a/pillar.example
+++ b/pillar.example
@@ -17,3 +17,10 @@ wso2:
 
 oracle-java:
   java_home: '/usr/lib/jvm/java-6-oracle'
+
+# --------------------------------------------
+# go
+# --------------------------------------------
+
+go:
+  version: '14.2.0-377'
